# Notta-Advisor

./: .gitignore  README.md  architecture_diagram.md  db.sqlite3  flow_diagram.md  manage.py  notta_celery.py  pyproject.toml  requirements.txt
advisor/: models.py  tasks.py
advisor/migrations/: 0001_initial.py
config/: asgi.py  settings.py  wsgi.py
notta_advisor_api/: asgi.py  urls.py  wsgi.py
src/: __init__.py  agent.py  ageny.py  cli.py  config.py  custom_console.py  data_loader.py  google_llm_init.py  index_manager.py
storage/2019/: default__vector_store.json  docstore.json  index_store.json
storage/2020/: default__vector_store.json  docstore.json  index_store.json
storage/2021/: default__vector_store.json  docstore.json  index_store.json
storage/2022/: default__vector_store.json  docstore.json  index_store.json
