[project]
name = "notta-advisor"
version = "0.1.0"
description = "Financial AI Advisor with Django and LlamaIndex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django==5.2.8",
    "django-debug-toolbar==6.1.0",
    "llama-index",
    "llama-index-core==0.12.52.post1",
    "llama-index-embeddings-google-genai==0.2.1",
    "llama-index-llms-google-genai",
    "llama-index-readers-file",
    "llama-index-readers-llama-parse",
    "llama-index-workflows==1.3.0",
    "llama-parse",
    "google-genai==1.25.0",
    "unstructured",
    "yfinance==0.2.54",
    "celery",
    "django-celery-beat",
    "django-celery-results",
    "python-dotenv==1.1.1",
    "pandas==2.2.3",
    "requests==2.32.4",
    "beautifulsoup4==4.13.4",
    "pytest==8.4.1",
]
